# claude-think

./: .gitignore  AGENTS.md  API-DOCS.md  CONFIGURATION.md  CREATE-SIGNATURE.md  DEV-SETUP.md  DISABLE-VERIFICATION.md  EXAMPLES.md  INSTRUCTIONS.md  PACKAGE-FIX.md  PHASE1-SUMMARY.md  PHASE2-SUMMARY.md  PHASE3-SUMMARY.md  PRIVACY.md  PROGRESS.md  PROJECT-PLAN.md  QUICK-START.md  README.md  SECURITY.md  SETUP.md  USER-GUIDE.md  claude-think-tool.md  main.py  manifest.yaml  plugin.yaml  pyproject.toml  pytest.ini  requirements.txt  run-dev.sh  sign-plugin.sh  validate_plugin.py
docs/: USER_GUIDE.md
provider/: __init__.py  think_provider.py  think_provider.yaml
src/: __init__.py  config.py  context_manager.py  errors.py  prompt_templates.py
tests/: __init__.py  test_context_manager.py  test_integration.py  test_performance.py  test_think_tool.py
tools/: __init__.py  think.yaml  think_tool.py
